added input placeholders

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,7 +10,7 @@
 <body>
 <h3>Регистронезависимый поиск с начала строки.</h3>
 <dl>
-    <dd><label for="first_name">Имя</label><input type="text" class="searchparam" id="first_name" value=""></dd>
+    <dd><label for="first_name">Имя</label><input type="text" class="searchparam" id="first_name" value="" placeholder="буква или слово целиком"></dd>
 </dl>
 <dl>
     <dd><label for="last_name">Фамилия</label><input type="text" class="searchparam" id="last_name" value=""></dd>
@@ -25,7 +25,7 @@
     <dd><label for="model">Автомобиль</label><input type="text" class="searchparam" id="model" value=""></dd>
 </dl>
 <dl>
-    <dd><label for="license">Госномер</label><input type="text" class="searchparam" id="license" value=""></dd>
+    <dd><label for="license">Госномер</label><input type="text" class="searchparam" id="license" value="" placeholder="х000хх000"></dd>
 </dl>
 <button type="submit" id="search">Найти</button>
 <hr>
